feat: add category page

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #3399CC;
+    color: #fff;
 }
 button{
     cursor: pointer;
