--- a/src/components/Admin/Products/products.scss
+++ b/src/components/Admin/Products/products.scss
@@ -16,7 +16,7 @@
         }
     }
     &__item{
-        
+        color: #000;
         display: flex;
         flex-direction: column;
         margin-bottom: 10px;
@@ -44,6 +44,7 @@
     border: 1px solid red;
     padding: 20px;
     margin: 10px;
+    
     img{
         max-width: 100%;
     }
