--- a/src/components/HOC/Popup.scss
+++ b/src/components/HOC/Popup.scss
@@ -13,6 +13,8 @@
     transition: all .3s;
     z-index: 99;
     background-color: #fff;
+    min-width: 320px;
+    color: #000;
     &__close{
         cursor: pointer;
         padding: 10px;
@@ -23,4 +25,20 @@
         border: none;
         background: transparent;
     }
+}
+.popup-overflow{
+    &.active{
+        opacity: 1;
+        visibility: visible;
+    }
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, .5);
+    z-index: 10;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .3s;
 }
