--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,7 @@
 body{
     min-height: 100vh;
     min-width: 320px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #3399CC;
-    color: #fff;
+    background-color: #ccc;
 }
 button{
     cursor: pointer;
@@ -15,7 +11,10 @@ a{
     text-decoration: none;
 }
 #root{
-    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 .container{
     max-width: 1600px;
