feat: add PayPal rquiring

--- a/src/components/HOC/style.scss
+++ b/src/components/HOC/style.scss
@@ -51,6 +51,7 @@
     top: 25px;
     transform: translateY(-300%);
     transition: transform .3s;
+    z-index: 15;
     &.active{
         transform: translateY(0);
     }
