--- a/src/components/Admin/Products/products.scss
+++ b/src/components/Admin/Products/products.scss
@@ -4,6 +4,10 @@
         align-items: center;
         justify-content: space-between;
         list-style: none;
+        img{
+            max-width: 100px;
+            max-height: 100px;
+        }    
     }
     &__images-item{
         margin: 0;
